Adding separate file for js code

--- a/index.html
+++ b/index.html
@@ -24,13 +24,6 @@ Here goes the content
 </div>
 <script src="jscss/jquery.js"></script>
 <script src="bootstrap/js/bootstrap.js"></script>
-<script type="text/javascript">
-$("li a").click(function() {
-    $("body").css("background","url('img/"+$(this).attr("href").substr(1)+"')");
-    var lielement = $(this).parent();
-    $(lielement).siblings().removeClass("active");
-    $(lielement).addClass("active");
-});
-</script>
+<script src="jscss/script.js"></script>
 </body>
 </html>
