--- a/index.html
+++ b/index.html
@@ -19,8 +19,20 @@
 </div>
 </div>
 </div>
-<div id="content" class="row">
-Here goes the content
+<div id="content-wrapper">
+    <div id="dashboard">
+        <div class="brick">Dashboard</div>
+        <div class="brick">Brick 2</div>
+    </div>
+    <div id="content-main">
+        <div class="brick">
+        Here goes the content<br/>
+        Something<br/>
+        blah blah<br/>
+        Tweet...<br/>
+        Front end looks decent now :)<br/>
+        </div>
+    </div>
 </div>
 <script src="jscss/jquery.js"></script>
 <script src="bootstrap/js/bootstrap.js"></script>
