Adding tweet box

--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
     </div>
     <div id="content-main">
         <div class="brick">
-        Here goes the content<br/>
-        Something<br/>
-        blah blah<br/>
-        Tweet...<br/>
-        Front end looks decent now :)<br/>
+            <div class="tweetBoxContainer">
+                <h4 style="display:none">Write a tweet:</h4>
+                <textarea id="tweetBox" rows=1 placeholder="Wassup?"></textarea>
+                <div style="display:none">
+                    <button class="btn btn-primary">Post</button>
+                    <button class="btn">Clear</button>
+                </div>
+            </div>
+            Here goes the content<br/>
+            Something<br/>
+            <div class="clearer"></div>
         </div>
     </div>
 </div>
