Clear button working

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <h3 style="display:none">Write a tweet:</h3>
                 <textarea id="tweetBox" rows=1 placeholder="Wassup?"></textarea>
                 <div style="display:none">
-                    <button class="btn btn-primary">Post</button>
-                    <button class="btn">Clear</button>
+                    <button id="postBtn" class="btn btn-primary">Post</button>
+                    <button id="clearBtn" class="btn">Clear</button>
                 </div>
             </div>
             <hr/>
