Auto resize of tweetbox

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="brick">
             <div class="tweetBoxContainer">
                 <h3 style="display:none">Write a tweet:</h3>
-                <textarea id="tweetBox" rows=1 placeholder="Wassup?"></textarea>
+                <textarea id="tweetBox" placeholder="Wassup?"></textarea>
                 <div style="display:none">
                     <button id="postBtn" class="btn btn-primary">Post</button>
                     <button id="clearBtn" class="btn">Clear</button>
