--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </div>
 </div>
 </div>
+<div id="ticker"></div>
 <div id="content-wrapper">
     <div id="dashboard">
         <div class="brick">Dashboard</div>
