Adding logout button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <li><a href="#pattern5.jpg">Pattern 5</a></li>
 <li><a href="#pattern6.gif">Pattern 6</a></li>
 </ul>
+<button id="logoutButton" class="btn btn-danger"><i class="icon-off icon-white"></i> Logout</button>
 <input type="text" id="searchBox" class="search-query" placeholder="Search..." />
 </div>
 </div>
