Bug in viewing different profile fixed

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <div class="navbar-inner">
 <div class="container">
 <ul class="nav">
-<li class="active"><a href="#feed">Feeds</a></li>
-<li><a href="#profile">Profile</a></li>
+<li id="menu-feed" class="menuitem active"><a href="#feed">Feeds</a></li>
+<li id="menu-profile" class="menuitem"><a href="#profile">Profile</a></li>
 </ul>
 <button id="logoutButton" class="btn btn-danger"><i class="icon-off icon-white"></i> Logout</button>
 <input type="text" id="searchBox" class="search-query" placeholder="Search..." />
