--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <div id="tab-profile" class="sector">
         <div id="content-profile">
             <div class="brick">
-                <button class="btn btn-primary btn-large" id="followButton" style="float:right;">Follow</button>
+                <button class="btn btn-primary btn-large" id="followButton" style="float:right;display:none;">Follow</button>
+                <button class="btn btn-primary btn-large" id="unfollowButton" style="float:right;display:none;">UnFollow</button>
                 Username: <span id="profile-username"></span><br/>
                 EmailId: <span id="profile-emailid"></span><br/>
                 Followers count: <span id="profile-followers-count"></span><br/>
@@ -62,8 +63,18 @@
                 <div class="clearer"></div>
             </div>
         </div>
-
     </div>
+
+    <div id="tab-search" class="sector">
+        <div class="brick">
+            <h2>Search results for: <span id="search-query"></span></h2>
+            Found <span id="search-count">0</span> users
+            <hr/>
+            <div id="searchContainer"></div>
+        </div>
+    </div>
+
+    <div class="clearer"></div>
 </div>
 
 <script src="jscss/jquery.js"></script>
@@ -71,9 +82,21 @@
 <script src="bootstrap/js/bootstrap.js"></script>
 <script src="jscss/script.js"></script>
 <script type="text/html" id="tmpl-tweet">
-    <div class="tweet" id="<%=tweetid%>" style="display:none">
-        <span class="user"><a href="#profile/<%=userid%>" onclick="showTab('profile'); updateProfile(<%=userid%>);"><%=username%></a></span><span class="timestamp" ref="<%=timestamp%>"></span> <br/>
+    <div class="tweet listing" id="<%=tweetid%>" style="display:none">
+        <span class="user"><a href="#profile/<%=userid%>" onclick="showProfile(<%=userid%>);"><%=username%></a></span><span class="timestamp" ref="<%=timestamp%>"></span> <br/>
         <%=tweet%>
+    </div>
+</script>
+<script type="text/html" id="tmpl-user">
+    <div class="listing" id="<%=searchid%>" style="display:none;">
+        <span class="user"><a href="#profile/<%=userid%>" onclick="showProfile(<%=userid%>);"><%=username%></a> </span>
+        <span class="email"> EmailId: <%=emailid%></span><br/>
+        <span class="followers">
+            Followers:
+        <% _.each(followers, function(follower) { %>
+            <a href="#profile/<%=follower['userid']%>" onclick="showProfile(<%=follower['userid']%>);"><%=follower['username']%></a>,
+        <% }); %>
+        </span>
     </div>
 </script>
 </body>
