--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
 <title>Twitter App</title>
 <link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.css" />
@@ -53,8 +53,8 @@
                 <button class="btn btn-primary btn-large" id="unfollowButton" style="float:right;display:none;">UnFollow</button>
                 Username: <span id="profile-username"></span><br/>
                 EmailId: <span id="profile-emailid"></span><br/>
-                Followers count: <span id="profile-followers-count"></span><br/>
-                Following count: <span id="profile-following-count"></span><br/>
+                Followers: <a id="followers-popup-link" href="#"><span id="profile-followers-count"></span></a><br/>
+                Following: <a id="following-popup-link" href="#"><span id="profile-following-count"></span></a><br/>
             </div>
             <div class="brick">
                 <h2>Tweets feed:</h2>
@@ -74,6 +74,13 @@
         </div>
     </div>
 
+    <div id="popup">
+        <div id="popupInner">
+            <a href="#" id="popupClose" onclick="closepopup()" style="float:right;margin:10px;">Close</a>
+            <div id="popupContainer"></div>
+        </div>
+    </div>
+
     <div class="clearer"></div>
 </div>
 
@@ -88,15 +95,17 @@
     </div>
 </script>
 <script type="text/html" id="tmpl-user">
-    <div class="listing" id="<%=searchid%>" style="display:none;">
-        <span class="user"><a href="#profile/<%=userid%>" onclick="showProfile(<%=userid%>);"><%=username%></a> </span>
+    <div class="listing" id="<%=id%>" style="display:none;">
+        <span class="user"><a href="#profile/<%=userid%>" onclick="showProfile(<%=userid%>);"><%=username%></a> </span><br/>
         <span class="email"> EmailId: <%=emailid%></span><br/>
+        <% if(typeof followers !== 'undefined') { %>
         <span class="followers">
             Followers:
         <% _.each(followers, function(follower) { %>
             <a href="#profile/<%=follower['userid']%>" onclick="showProfile(<%=follower['userid']%>);"><%=follower['username']%></a>,
         <% }); %>
         </span>
+        <% } %>
     </div>
 </script>
 </body>
