--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div class="navbar navbar-fixed-top">
 <div class="navbar-inner">
 <div class="container">
-<ul class="nav">
+<ul id="navbar" class="nav">
 <li id="menu-feed" class="menuitem active"><a href="#feed">Feeds</a></li>
 <li id="menu-profile" class="menuitem"><a href="#profile">Profile</a></li>
 </ul>
@@ -57,7 +57,7 @@
                 Following: <a id="following-popup-link" href="#"><span id="profile-following-count"></span></a><br/>
             </div>
             <div class="brick">
-                <h2>Tweets feed:</h2>
+                <h2>User tweets:</h2>
                 <div id="tweetContainer" class="tweetsContainer">
                 </div>
                 <div class="clearer"></div>
@@ -68,9 +68,14 @@
     <div id="tab-search" class="sector">
         <div class="brick">
             <h2>Search results for: <span id="search-query"></span></h2>
-            Found <span id="search-count">0</span> users
+            Found <span id="search-user-count">0</span> user(s) and <span id="search-tweet-count">0</span> tweet(s).
             <hr/>
-            <div id="searchContainer"></div>
+            <ul class="nav nav-tabs" style="margin-bottom:3px;">
+                <li id="searchUserTab" class="searchTab active"><a href="#searchUser" onclick="changesearchTab('User')">Users</a></li>
+                <li id="searchTweetTab" class="searchTab"><a href="#searchTweet" onclick="changesearchTab('Tweet')">Tweets</a></li>
+            </ul>
+            <div id="searchUserContainer" class="searchContainer active"></div>
+            <div id="searchTweetContainer" class="searchContainer"></div>
         </div>
     </div>
 
@@ -98,7 +103,7 @@
     <div class="listing" id="<%=id%>" style="display:none;">
         <span class="user"><a href="#profile/<%=userid%>" onclick="showProfile(<%=userid%>);"><%=username%></a> </span><br/>
         <span class="email"> EmailId: <%=emailid%></span><br/>
-        <% if(typeof followers !== 'undefined') { %>
+        <% if(typeof followers !== 'undefined' && followers.length > 0) { %>
         <span class="followers">
             Followers:
         <% _.each(followers, function(follower) { %>
