--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </div>
 </div>
 </div>
-<div id="ticker"></div>
+<div id="background">
+&nbsp;&nbsp;
+</div>
 <div id="content-wrapper">
 
     <!-- feed -->
@@ -51,63 +53,85 @@
             <div class="brick">
                 <button class="btn btn-primary btn-large" id="followButton" style="float:right;display:none;">Follow</button>
                 <button class="btn btn-primary btn-large" id="unfollowButton" style="float:right;display:none;">UnFollow</button>
-                Username: <span id="profile-username"></span><br/>
-                EmailId: <span id="profile-emailid"></span><br/>
-                Followers: <a id="followers-popup-link" href="#"><span id="profile-followers-count"></span></a><br/>
-                Following: <a id="following-popup-link" href="#"><span id="profile-following-count"></span></a><br/>
+                <h2><span id="profileUsername"></span></h2>
+                EmailId: <span id="profileEmailId"></span><br/>
+                Tweets: <a id="profileTweetsLink" href="#"></a><br/>
+                Followers: <a id="profileFollowersLink" href="#"></a><br/>
+                Following: <a id="profileFollowingLink" href="#"></a><br/>
             </div>
-            <div class="brick">
-                <h2>User tweets:</h2>
-                <div id="tweetContainer" class="tweetsContainer">
+            <div class="brick" style="overflow: hidden;">
+                <div style="overflow: hidden;">
+                    <div id="container" style="width:2580px;">
+                        <div id="profile-tweets" class="profileList">
+                            <h2>User tweets:</h2>
+                            <div id="tweetContainer" class="tweetsContainer">
+                            </div>
+                            <div class="clearer"></div>
+                        </div>
+                        <div id="profile-followers" class="profileList">
+                            <h2>Followers:</h2>
+                            <div id="followersContainer" class="listing"></div>
+                            <div class="clearer"></div>
+                        </div>
+                        <div id="profile-following" class="profileList">
+                            <h2>Following:</h2>
+                            <div id="followingContainer" class="listing"></div>
+                            <div class="clearer"></div>
+                        </div>
+                    </div>
                 </div>
-                <div class="clearer"></div>
             </div>
         </div>
     </div>
 
+    <!-- search -->
     <div id="tab-search" class="sector">
         <div class="brick">
             <h2>Search results for: <span id="search-query"></span></h2>
             Found <span id="search-user-count">0</span> user(s) and <span id="search-tweet-count">0</span> tweet(s).
             <hr/>
             <ul class="nav nav-tabs" style="margin-bottom:3px;">
-                <li id="searchUserTab" class="searchTab active"><a href="#searchUser" onclick="changesearchTab('User')">Users</a></li>
-                <li id="searchTweetTab" class="searchTab"><a href="#searchTweet" onclick="changesearchTab('Tweet')">Tweets</a></li>
+                <li id="searchUserTab" class="searchTab active"><a id="searchUserLink" href="#">Users</a></li>
+                <li id="searchTweetTab" class="searchTab"><a id="searchTweetLink" href="#">Tweets</a></li>
             </ul>
             <div id="searchUserContainer" class="searchContainer active"></div>
             <div id="searchTweetContainer" class="searchContainer"></div>
         </div>
     </div>
 
+    <!-- popup -->
     <div id="popup">
+        <div id="closeButtonPop">
+        <a href="#" id="popupClose">Close</a>
+        </div>
         <div id="popupInner">
-            <a href="#" id="popupClose" onclick="closepopup()" style="float:right;margin:10px;">Close</a>
             <div id="popupContainer"></div>
         </div>
     </div>
 
     <div class="clearer"></div>
 </div>
+<div id="ticker"></div>
 
 <script src="jscss/jquery.js"></script>
 <script src="jscss/underscore.js"></script>
 <script src="bootstrap/js/bootstrap.js"></script>
 <script src="jscss/script.js"></script>
 <script type="text/html" id="tmpl-tweet">
-    <div class="tweet listing" id="<%=tweetid%>" style="display:none">
-        <span class="user"><a href="#profile/<%=userid%>" onclick="showProfile(<%=userid%>);"><%=username%></a></span><span class="timestamp" ref="<%=timestamp%>"></span> <br/>
-        <%=tweet%>
+    <div class="tweet listing" id="<%=id%>" style="display:none">
+        <span class="user"><a href="#profile/<%=sourceuser['userid']%>"><%=sourceuser['username']%></a></span><span class="timestamp" ref="<%=timestamp%>"></span> <br/>
+        <%=postcontent%>
     </div>
 </script>
 <script type="text/html" id="tmpl-user">
     <div class="listing" id="<%=id%>" style="display:none;">
-        <span class="user"><a href="#profile/<%=userid%>" onclick="showProfile(<%=userid%>);"><%=username%></a> </span><br/>
+        <span class="user"><a href="#profile/<%=userid%>"><%=username%></a> </span><br/>
         <span class="email"> EmailId: <%=emailid%></span><br/>
         <% if(typeof followers !== 'undefined' && followers.length > 0) { %>
         <span class="followers">
             Followers:
         <% _.each(followers, function(follower) { %>
-            <a href="#profile/<%=follower['userid']%>" onclick="showProfile(<%=follower['userid']%>);"><%=follower['username']%></a>,
+            <a href="#profile/<%=follower['userid']%>"><%=follower['username']%></a>,
         <% }); %>
         </span>
         <% } %>
