--- a/index.html
+++ b/index.html
@@ -138,13 +138,17 @@
 <script src="jscss/underscore.js"></script>
 <script src="bootstrap/js/bootstrap.js"></script>
 <script src="jscss/md5.js"></script>
-<script src="jscss/script.js"></script>
 <script type="text/html" id="tmpl-tweet">
     <div class="tweet listing" id="<%=id%>" style="display:none">
         <img src="http://www.gravatar.com/avatar/<%=gravatarhash%>?s=64" class="gravatar"/>
         <span class="user"><a href="#profile/<%=sourceuser['userid']%>"><%=sourceuser['username']%></a> @<%=sourceuser['userid']%></span><span class="timestamp" ref="<%=timestamp%>"></span> <br/>
         <%=postcontent%>
     </div>
+</script>
+<script type="text/html" id="tmpl-user-search-popup">
+    <li>
+        <a href="#profile/<%=userid%>"><%=username%></a>
+    </li>
 </script>
 <script type="text/html" id="tmpl-user">
     <div class="listing" id="<%=id%>" style="display:none;">
@@ -153,13 +157,16 @@
         <% if(typeof postcount != 'undefined') { %>
         <a href="#profile/<%=userid%>">Tweets: <%=postcount%></a> <a href="#profile/<%=userid%>/followers">Followers: <%=followerscount%></a> <a href="#profile/<%=userid%>/following">Following: <%=followingcount%></a><br/>
         <% } %>
+        &nbsp;
+        <% if(following(userid)) { %>
+        <button class="btn" onclick="updateSearchUser('unfollow/<%=userid%>')">UnFollow</button>
+        <% } else if(userid!=myProfile['userid']) { %>
+        <button class="btn btn-primary" onclick="updateSearchUser('follow/<%=userid%>')">Follow</button>
+        <% } %>
         <span class="email"> EmailId: <%=emailid%></span><br/>
     </div>
 </script>
-<script type="text/html" id="tmpl-user-search-popup">
-    <li>
-        <a href="#profile/<%=userid%>"><%=username%></a>
-    </li>
-</script>
+<script src="jscss/script.js"></script>
+
 </body>
 </html>
