--- a/login.html
+++ b/login.html
@@ -4,37 +4,66 @@
 <link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.css" />
 <link type="text/css" rel="stylesheet" href="jscss/style.css" />
 <style type="text/css">
+    #content-wrapper {
+        position: relative;
+        width: 500px;
+        margin: 0px auto;
+        text-align: left;
+    }
     .formContainer {
-        width: 50%;
+        width: 460px;
         float: left;
-        text-align: center;
+    }
+    input[type=text], input[type=password] {
+        height: 30px;
+        margin: 5px;
+    }
+    label {
+        width: 140px;
+        text-align: right;
     }
 </style>
 </head>
 <body>
 <div id="content-wrapper">
     <div class="well form-inline">
-        <div id="message"></div>
-        <div id="loginDiv" class="formContainer">
-            <label for="loginEmailid">Email or userId:</label><input type="text" id="loginEmailid" placeholder="Email..." /><br/>
-            <label for="loginPassword">Password:</label><input type="password" id="loginPassword" placeholder="Password..." /><br/>
-            <button id="loginButton" class="btn btn-primary">Login</button>
+        <center><h2>Mini Twitter</h2></center>
+        <div style="margin: 20px; overflow: hidden;">
+            <div id="slideFrame" style="width: 920px;">
+                <div id="loginDiv" class="formContainer" style="margin-top:50px;">
+                    <label for="loginEmailid">Email or userId:</label><input type="text" id="loginEmailid" placeholder="Email..." /><br/>
+                    <label for="loginPassword">Password:</label><input type="password" id="loginPassword" placeholder="Password..." /><br/>
+                    <div style="margin-top:10px;margin-left:100px;">
+                        <button id="loginButton" class="btn btn-primary">Login</button>
+                        <button id="loginRegisterButton" class="btn">Register &gt;&gt;</button>
+                    </div>
+                </div>
+                <div id="registerDiv" class="formContainer">
+                    <label for="registerUsername">Username:</label><input type="text" id="registerUsername" placeholder="Username..." /><br/>
+                    <label for="registerUserid">User Id:</label><input type="text" id="registerUserid" placeholder="User Id..." /><br/>
+                    <label for="registerEmailid">Email Id:</label><input type="text" id="registerEmailid" placeholder="Email..." /><br/>
+                    <label for="registerPassword">Password:</label><input type="password" id="registerPassword" placeholder="Password..." /><br/>
+                    <label for="registerConfirmPassword">Confirm Password:</label><input type="password" id="registerConfirmPassword" placeholder="Password..." /><br/>
+                    <div style="margin-top:15px;margin-left:100px;">
+                        <button id="registerLoginButton" class="btn">&lt;&lt; Login</button>
+                        <button id="registerButton" class="btn btn-success">Register</button>
+                    </div>
+                </div>
+                <div class="clearer"></div>
+            </div>
         </div>
-        <div id="registerDiv" class="formContainer">
-            <label for="registerUsername">Username:</label><input type="text" id="registerUsername" placeholder="Username..." /><br/>
-            <label for="registerUserid">User Id:</label><input type="text" id="registerUserid" placeholder="User Id..." /><br/>
-            <label for="registerEmailid">Email Id:</label><input type="text" id="registerEmailid" placeholder="Email..." /><br/>
-            <label for="registerPassword">Password:</label><input type="password" id="registerPassword" placeholder="Password..." /><br/>
-            <label for="registerConfirmPassword">Confirm Password:</label><input type="password" id="registerConfirmPassword" placeholder="Password..." /><br/>
-            <button id="registerButton" class="btn btn-success">Register</button>
-        </div>
-        <div class="clearer"></div>
     </div>
 </div>
 <script src="jscss/jquery.js"></script>
 <script src="bootstrap/js/bootstrap.js"></script>
 <script src="jscss/md5.js"></script>
 <script>
+    $("#loginRegisterButton").click(function() {
+        $("#slideFrame").animate({marginLeft:-460});
+    })
+    $("#registerLoginButton").click(function() {
+        $("#slideFrame").animate({marginLeft:0});
+    })
     $("#loginButton").click(function() {
         $.post("/backend/login/", {
             'emailid': $("#loginEmailid").val(),
