--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
     <div id="tab-editprofile" class="sector">
         <div id="content-editprofile">
             <div class="brick form-inline">
-                <a href="http://www.gravatar.com/"><img id="editProfileImage" src="" class="gravatar"/></a>
-                <label for="editProfileUsername">Username: </label><input type="text" id="editProfileUsername" /><br/>
-                <label for="editProfileEmail">Email: </label><input type="text" id="editProfileEmail" /><br/>
-                <label for="editProfilePassword">Password: </label><input type="password" id="editProfilePassword" /><br/>
-                <label for="editProfileConfirmPassword">Confirm Password: </label><input type="password" id="editProfileConfirmPassword" /><br/>
-                <lable for="editProfileBackground">Background:</lable>
+                <a href="http://www.gravatar.com/"><img id="editProfileImage" src="" class="gravatar" style="float: none;"/></a><br/>
+                <input type="text" id="editProfileUsername" placeholder="Username"/><br/>
+                <input type="text" id="editProfileEmail" placeholder="Email"/><br/>
+                <input type="password" id="editProfilePassword" placeholder="Password"/><br/>
+                <input type="password" id="editProfileConfirmPassword" placeholder="Confirm Password"/><br/>
+
                 <select id="editProfileBackground">
                     <option value="img/pattern1.gif">Chakras</option>
                     <option value="img/pattern2.png">ABC</option>
@@ -123,7 +123,7 @@
                     <option value="img/pattern4.jpg">Curls</option>
                     <option value="img/pattern5.jpg">Blue cells</option>
                     <option value="img/pattern6.gif">Flowers 1</option>
-                </select>
+                </select><br/>
                 <button class="btn btn-primary" id="editProfileSave">Save</button>
             </div>
         </div>
@@ -185,7 +185,7 @@
         &nbsp;
         <% if(following(userid)) { %>
         <button class="btn" onclick="updateSearchUser('unfollow/<%=userid%>')">UnFollow</button>
-        <% } else if(userid!=myProfile['userid']) { %>
+        <% } else if(myProfile!=null&&userid!=myProfile['userid']) { %>
         <button class="btn btn-primary" onclick="updateSearchUser('follow/<%=userid%>')">Follow</button>
         <% } %>
         <span class="email"> EmailId: <%=emailid%></span><br/>
