tweet size restriction

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             <div class="brick">
                 <div class="tweetBoxContainer">
                     <h3 style="display:none">Write a tweet:</h3>
-                    <textarea id="tweetBox" placeholder="Wassup?"></textarea>
+                    <textarea maxlength="140" id="tweetBox" placeholder="Wassup?"></textarea>
+		    <p> <em id="counter"></em> </p>
                     <div style="display:none">
                         <button id="postBtn" class="btn btn-primary">Post</button>
                         <button id="clearBtn" class="btn">Clear</button>
